package denim_message;

enum MessageType {
  SIGNAL_MESSAGE = 1;
  PRE_KEY_SIGNAL_MESSAGE = 2;
  SENDER_KEY_MESSAGE = 3;
  PLAINTEXT_CONTENT  = 4;
}

message UserMessage {
  required bytes destination_account_id = 1;
  required uint32 destination_device_id = 2;
  required MessageType message_type  = 3;
  required bytes content = 4;
}

message BlockRequest {
  required string account_id = 1;
}

message KeyRequest {
  required bytes account_id = 1;
  repeated uint32 specific_device_ids = 2;
}

message KeyResponse {
  required bytes identity_key = 1;
  repeated KeyBundle key_bundle = 2;
}

message KeyUpdate {
  required SignedKeyStruct signed_pre_key = 1;
}

message SeedUpdate {
  required bytes pre_key_seed = 1;
  required bytes pq_pre_key_seed = 2;
}

message Error {
  required string error = 1;
  optional bytes account_id = 2;
}

message DummyPadding {
  required bytes padding = 1;
}

message DeniableMessage {
  required uint32 message_id = 1;
  oneof message_kind {
    BlockRequest block_request = 2;
    UserMessage deniable_message = 3;
    KeyRequest key_request = 4;
    KeyResponse key_response = 5;
    KeyUpdate key_refill = 6;
    SeedUpdate seed_update = 7;
    DummyPadding dummy = 8;
    Error error = 9;
  }
}

/*
enum Flag {
  FINAL = 1;
  NOT_FINAL = 2;
  DUMMY_PADDING = 3;
}

message DenimChunk {
  required bytes chunk = 1;
  required uint32 sequence_number = 2;
  required Flag flag = 3;
}

message DenimMessage {
  required bytes sam_message = 1;
  repeated DenimChunk chunks = 2;
  required bytes ballast = 3;
}

 */

message KeyStruct {
  required int32 id = 1;
  required bytes key = 2;
}

message SignedKeyStruct {
  required KeyStruct tuple = 1;
  required bytes signature = 2;
}

message KeyBundle {
  required uint32 device_id = 1;
  required uint32 registration_id = 2;
  required KeyStruct pre_key = 3;
  required SignedKeyStruct pq_pre_key = 4;
  required SignedKeyStruct signed_pre_key = 5;
}